runbook: Tier 2.5 phase D-aeron-stat — driver counter probe rules out internal back-pressure (Pop! 2026-05-14)
Continuation of D-investigate, no code change. AeronStat snapshots against
the shared cnc.dat during a c2400 burst (480k admits / 8.633s / 55603 rps)
show every Aeron driver-aggregate back-pressure / NAK / retransmit /
flow-control counter at delta=0 across every 5s window, including the two
windows that contained the load. Per-publication snd-bpe also stays at 0.

By elimination (D-investigate ruled out emit work; D-aeron-stat rules out
driver back-pressure) the residual ~3.4ms cluster RTT is single
cluster-service-thread serialisation + Aeron Cluster commit barrier, both
of which need multi-host (Phase 5) to parallelise. D-12 (Aeron driver
tuning) is dropped from the next-slice list for peak-RPS purposes.

Co-authored-by: Cursor <cursoragent@cursor.com>